adjust README and some refactoring